--- a/AndBible/res/values-ar/strings.xml
+++ b/AndBible/res/values-ar/strings.xml
@@ -102,7 +102,7 @@
   <!--Module download-->
   <string name="download">تحميل المستندات</string>
   <string name="download_confirmation">تحميل الكتاب المقدس من الانترنت</string>
-  <string name="download_source_message">يتم تحميل المستندات من  http://www.crosswire.org⏎ &amp; http://xiphos.org</string>
+  <string name="download_source_message">يتم تحميل المستندات من  http://www.crosswire.org\n&amp;http://ibt.org.ru\n&amp;http://xiphos.org</string>
   <string name="download_document_confirm_prefix">تحميل</string>
   <string name="download_refreshing_book_list">اعادة تحديث قائمة المستندات المتاحة</string>
   <string name="download_refresh_book_list_menu_item">اعادة تحديث (refresh)</string>
@@ -191,6 +191,7 @@
   <string name="restore">إستعادة</string>
   <string name="restore_confirmation">متأكد من الكتابة على ملاحظاتي و شارات الرجوع؟</string>
   <string name="restore_success">تم تحميل %s ملاحظاتي و شارات الرجوع على شريحة الذاكرة </string>
+  <!--About-->
   <!--Document types-->
   <string name="doc_type_bible">إنجيل</string>
   <string name="doc_type_commentary">تعليق</string>
