--- a/AndBible/res/values-pl/strings.xml
+++ b/AndBible/res/values-pl/strings.xml
@@ -81,10 +81,10 @@
   <string name="prefs_interface_locale_summary">Wybierz język</string>
   <string name="locale_change_warning">Aplikacja zostanie ponownie uruchomiona, aby przełączyć się na nowy język interfejsu</string>
   <string name="prefs_split_screen_title">Podziel ekran</string>
-  <string name="prefs_split_screen_summary">Dzielenie i łączenie</string>
+  <string name="prefs_split_screen_summary">Dzielenie i łączenie ekranu</string>
   <string name="prefs_split_screen_single">Jeden ekran</string>
-  <string name="prefs_split_screen_linked">Złączony</string>
-  <string name="prefs_split_screen_not_linked">Nie połączony</string>
+  <string name="prefs_split_screen_linked">Przewijaj tekst razem</string>
+  <string name="prefs_split_screen_not_linked">Przewijaj tekst osobno</string>
   <!--Notes screen-->
   <string name="no_chapter_notes">Brak przypisów dla tego rozdziału</string>
   <string name="no_verse_notes">Brak przypisów dla tego wersetu</string>
@@ -102,7 +102,7 @@
   <!--Module download-->
   <string name="download">Pobierz moduł</string>
   <string name="download_confirmation">Pobierz moduł z Internetu?</string>
-  <string name="download_source_message">Moduł zostanie pobrany z\nhttp://www.crosswire.org\ni http://xiphos.org</string>
+  <string name="download_source_message">Moduł zostanie pobrany z\nhttp://www.crosswire.org\ni http://ibt.org.ru\ni http://xiphos.org</string>
   <string name="download_document_confirm_prefix">Pobieranie</string>
   <string name="download_refreshing_book_list">Odśwież listę dostępnych dokumentów</string>
   <string name="download_refresh_book_list_menu_item">Odśwież</string>
@@ -191,6 +191,7 @@
   <string name="restore">Przywróć</string>
   <string name="restore_confirmation">Czy chcesz nadpisać swoje notatki i zakładki?</string>
   <string name="restore_success">Przywróć moje notatki i zakładki zapisane w %s na karcie SD</string>
+  <!--About-->
   <!--Document types-->
   <string name="doc_type_bible">Biblia</string>
   <string name="doc_type_commentary">Komentarz</string>
