--- a/AndBible/res/values-zh-rTW/strings.xml
+++ b/AndBible/res/values-zh-rTW/strings.xml
@@ -191,6 +191,7 @@
   <string name="restore">恢復</string>
   <string name="restore_confirmation">覆蓋現有筆記和書簽麼?</string>
   <string name="restore_success">筆記和書簽已經從SD存儲卡目錄 %s 中的備份中恢復</string>
+  <!--About-->
   <!--Document types-->
   <string name="doc_type_bible">聖經</string>
   <string name="doc_type_commentary">注釋</string>
