--- a/AndBible/res/values-es/strings.xml
+++ b/AndBible/res/values-es/strings.xml
@@ -192,6 +192,8 @@
   <string name="restore_confirmation">¿Sobreescribir Mis Notas y Marcadores?</string>
   <string name="restore_success">Se han restaurado Mis Notas y Marcadores desde %s en la tarjeta SD</string>
   <!--About-->
+  <string name="about_version">Versión: %s</string>
+  <string name="about_versification">Versificación: %s</string>
   <!--Document types-->
   <string name="doc_type_bible">Biblia</string>
   <string name="doc_type_commentary">Comentario</string>
