--- a/AndBible/res/values-nn/strings.xml
+++ b/AndBible/res/values-nn/strings.xml
@@ -192,6 +192,8 @@
   <string name="restore_confirmation">Skrive over notat og bokmerke?</string>
   <string name="restore_success">Notat og bokmerke gjenoppretta frå %s på minnekortet</string>
   <!--About-->
+  <string name="about_version">Versjon: %s</string>
+  <string name="about_versification">Versifisering: %s</string>
   <!--Document types-->
   <string name="doc_type_bible">Biblar</string>
   <string name="doc_type_commentary">Bibelkommentarar</string>
