--- a/AndBible/res/values-cy/strings.xml
+++ b/AndBible/res/values-cy/strings.xml
@@ -102,7 +102,7 @@
   <!--Module download-->
   <string name="download">Lawrlwytho Dogfennau</string>
   <string name="download_confirmation">Llwytho Beibl oddi ar y rhyngrwyd?</string>
-  <string name="download_source_message">Lawrlwythir dogfennau o\nhttp://www.crosswire.org⏎\n&amp; http://ibt.org.ru⏎\n&amp; http://xiphos.org</string>
+  <string name="download_source_message">Lawrlwythir dogfennau o\nhttp://www.crosswire.org\n&amp; http://ibt.org.ru\n&amp; http://xiphos.org</string>
   <string name="download_document_confirm_prefix">Lawrlwytho</string>
   <string name="download_refreshing_book_list">Adnewyddu\'r rhestr dogfennau sydd ar gael</string>
   <string name="download_refresh_book_list_menu_item">Adnewyddu</string>
