--- a/AndBible/res/values-in/strings.xml
+++ b/AndBible/res/values-in/strings.xml
@@ -102,7 +102,7 @@
   <!--Module download-->
   <string name="download">Download Dokumen</string>
   <string name="download_confirmation">Download versi Alkitab dari internet?</string>
-  <string name="download_source_message">Dokumen download dari⏎\nhttp://www.crosswire.org⏎\n&amp; http://ibt.org.ru⏎\n&amp; http://xiphos.org</string>
+  <string name="download_source_message">Dokumen download dari\nhttp://www.crosswire.org\n&amp; http://ibt.org.ru\n&amp; http://xiphos.org</string>
   <string name="download_document_confirm_prefix">Download </string>
   <string name="download_refreshing_book_list">Menyegarkan daftar dokumen yang tersedia</string>
   <string name="download_refresh_book_list_menu_item">Menyegarkan</string>
