--- a/AndBible/res/values-ko/strings.xml
+++ b/AndBible/res/values-ko/strings.xml
@@ -21,7 +21,7 @@
   <string name="choosePassageVerseName">구절 선택</string>
   <!--Search-->
   <string name="search_index">검색 색인</string>
-  <string name="index_creation_required">색인을 검색 할 필요합니다.\n\n색인은 인터넷에서 다운로드 또는 로컬 만들 수 있습니다. ⏎ ⏎ 다운로드가 훨씬 빠르고 다운로드 인덱스가 더 검색 기능을 가지고 있습니다.\n\n인터넷 연결이 인덱스를 다운로드해야합니다.\n</string>
+  <string name="index_creation_required">색인을 검색 할 필요합니다.\n\n색인은 인터넷에서 다운로드 또는 로컬 만들 수 있습니다.\n\n다운로드가 훨씬 빠르고 다운로드 인덱스가 더 검색 기능을 가지고 있습니다.\n\n인터넷 연결이 인덱스를 다운로드해야합니다.\n</string>
   <string name="indexing_wait_msg">When indexing has completed you will be taken to the search screen.</string>
   <string name="index">색인</string>
   <string name="index_download">다운로드</string>
