--- a/AndBible/res/values-lv/strings.xml
+++ b/AndBible/res/values-lv/strings.xml
@@ -135,7 +135,7 @@
   <string name="delete_search_index_doc">Dzēst %s indeksu?</string>
   <!--Verse context menu-->
   <string name="select_text">iezīmēt tekstu</string>
-  <string name="select_text_help">Vilkt lēnām lai atzīmētu. ⏎ Tad pieskarties atzīmētajam lai nokopētu.</string>
+  <string name="select_text_help">Vilkt lēnām lai atzīmētu. \n Tad pieskarties atzīmētajam lai nokopētu.</string>
   <string name="notes">Zemsvītras piezīmes un atsauces</string>
   <string name="copy">Kopēt šo pantu</string>
   <string name="share_verse">Dalīties ar šo pantu ...</string>
