--- a/AndBible/res/values-hi/strings.xml
+++ b/AndBible/res/values-hi/strings.xml
@@ -192,6 +192,8 @@
   <string name="restore_confirmation">बैकअप से मेरे टिप्पणी/पुस्तक-चिन्ह लिखना ?</string>
   <string name="restore_success">टिप्पणी / पुस्तक-चिन्ह लिए, एस-डी कार्ड से: %s </string>
   <!--About-->
+  <string name="about_version">संस्करण: %s</string>
+  <string name="about_versification">छंद व्यवस्था: %s</string>
   <!--Document types-->
   <string name="doc_type_bible">बाइबिल</string>
   <string name="doc_type_commentary">कमेंटरी</string>
